trying to fix css overflow, changed line 509 in css to scroll from hidden on overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,7 @@ table {
     padding-right: 40px;
   }
 
-html {overflow-y: scroll; overflow-x: hidden;}
+html {overflow-y: scroll; overflow-x: scroll;} 
 body {font-family: 'Open Sans', sans-serif; background:#f0eeed; color: #676767;}
 
 .wrapper {width: 980px; margin: 0 auto;}
